--- a/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
@@ -55,7 +55,7 @@
                                     <constraint firstAttribute="height" constant="1" id="cpC-cz-kXD"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-check-round" translatesAutoresizingMaskIntoConstraints="NO" id="bCQ-GP-ba1">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-check-success" translatesAutoresizingMaskIntoConstraints="NO" id="bCQ-GP-ba1">
                                 <rect key="frame" x="157" y="105" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="AqJ-zV-7WC"/>
@@ -165,7 +165,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYV-it-c8L">
                                 <rect key="frame" x="20" y="225" width="122" height="24"/>
                                 <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49J-Jm-N8z">
@@ -173,7 +173,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" id="Zn8-WM-MQb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="18"/>
                                 <state key="normal" title="Skip to Discovery">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -237,6 +237,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon-check-round" width="512" height="512"/>
+        <image name="icon-check-success" width="512" height="512"/>
     </resources>
 </document>
