Full profile redesign images, demographics, name fixes #237

--- a/Pear/Controllers/Profiles/Profile Demographics/NewProfileDemographicsViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Demographics/NewProfileDemographicsViewController.storyboard
@@ -14,16 +14,16 @@
             <objects>
                 <viewController id="jYZ-sv-aGJ" customClass="NewProfileDemographicsViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="5kQ-BE-VR4"/>
-                        <viewControllerLayoutGuide type="bottom" id="YAI-5O-m4M"/>
+                        <viewControllerLayoutGuide type="top" id="5M8-Sf-Hsz"/>
+                        <viewControllerLayoutGuide type="bottom" id="zux-X2-to5"/>
                     </layoutGuides>
-                    <stackView key="view" opaque="NO" contentMode="scaleToFill" axis="vertical" id="vKN-oy-wkJ">
+                    <stackView key="view" opaque="NO" contentMode="scaleToFill" axis="vertical" id="fn4-bR-neG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </stackView>
                     <size key="freeformSize" width="375" height="86"/>
                     <connections>
-                        <outlet property="stackView" destination="vKN-oy-wkJ" id="rsA-Vk-KVe"/>
+                        <outlet property="stackView" destination="fn4-bR-neG" id="Eby-vv-QIZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBl-r5-bkY" userLabel="First Responder" sceneMemberID="firstResponder"/>
