Decision based discovery fixes #247 fixes #240 fixes #234

--- a/Pear/Controllers/Discovery Flow/Discovery Full Profile View/DiscoveryFullProfileViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Discovery Full Profile View/DiscoveryFullProfileViewController.storyboard
@@ -18,42 +18,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lb2-5H-MMS" userLabel="Header Container">
-                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FuM-UC-gNb">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fYb-Vk-EV8">
+                                <rect key="frame" x="228" y="577" width="60" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="discovery-icon-like"/>
+                                <connections>
+                                    <action selector="personalRequestButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="Ds1-gO-tA9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="59G-8I-dMp">
+                                <rect key="frame" x="15" y="577" width="60" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="discovery-icon-skip"/>
+                                <connections>
+                                    <action selector="skipProfileButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="p8C-Pm-Yp2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RCU-1E-fql">
+                                <rect key="frame" x="300" y="577" width="60" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="Bn9-y9-T4l"/>
+                                    <constraint firstAttribute="height" constant="60" id="Oag-mo-l7Y"/>
+                                </constraints>
+                                <state key="normal" image="discovery-icon-pear"/>
+                                <connections>
+                                    <action selector="pearButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="OF8-k1-AsJ"/>
+                                </connections>
+                            </button>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lb2-5H-MMS" userLabel="Header Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="0.0"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eG-b0-BBl" userLabel="Back Button">
-                                        <rect key="frame" x="12" y="5" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="Z02-1Z-ekM"/>
-                                            <constraint firstAttribute="width" constant="40" id="ZYh-A3-Osa"/>
-                                        </constraints>
-                                        <state key="normal" image="onboarding-back-button">
-                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="backButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="oQ5-Go-gay"/>
-                                        </connections>
-                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jst-Tn-iZQ" userLabel="Progress View">
-                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <rect key="frame" x="0.0" y="-1" width="375" height="1"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="w9x-mf-lH6"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eSL-1y-QLb">
-                                        <rect key="frame" x="323" y="5" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="SRY-Qd-aq0"/>
-                                            <constraint firstAttribute="width" constant="40" id="aEE-RM-kWa"/>
-                                        </constraints>
-                                        <state key="normal" image="icon-more"/>
-                                        <connections>
-                                            <action selector="moreButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="UFi-w6-wXU"/>
-                                        </connections>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YVo-UZ-U0x">
-                                        <rect key="frame" x="187.5" y="25" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="187.5" y="0.0" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -61,53 +68,45 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="2eG-b0-BBl" firstAttribute="leading" secondItem="lb2-5H-MMS" secondAttribute="leading" constant="12" id="6hc-HE-xyR"/>
                                     <constraint firstItem="Jst-Tn-iZQ" firstAttribute="leading" secondItem="lb2-5H-MMS" secondAttribute="leading" id="8sG-uV-Aj5"/>
-                                    <constraint firstAttribute="trailing" secondItem="eSL-1y-QLb" secondAttribute="trailing" constant="12" id="E1b-qW-nry"/>
-                                    <constraint firstAttribute="height" constant="50" id="MYw-Fe-fYx"/>
-                                    <constraint firstItem="eSL-1y-QLb" firstAttribute="centerY" secondItem="2eG-b0-BBl" secondAttribute="centerY" id="Nv7-7F-NHc"/>
+                                    <constraint firstAttribute="height" id="MYw-Fe-fYx"/>
                                     <constraint firstItem="YVo-UZ-U0x" firstAttribute="centerX" secondItem="lb2-5H-MMS" secondAttribute="centerX" id="U20-El-KLV"/>
                                     <constraint firstItem="Jst-Tn-iZQ" firstAttribute="width" secondItem="lb2-5H-MMS" secondAttribute="width" id="WFM-nM-gj8"/>
                                     <constraint firstItem="YVo-UZ-U0x" firstAttribute="centerY" secondItem="lb2-5H-MMS" secondAttribute="centerY" id="dvJ-O5-ucl"/>
                                     <constraint firstAttribute="bottom" secondItem="Jst-Tn-iZQ" secondAttribute="bottom" id="iIU-eZ-hbX"/>
-                                    <constraint firstItem="2eG-b0-BBl" firstAttribute="centerY" secondItem="lb2-5H-MMS" secondAttribute="centerY" id="u2o-Xj-JrU"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FuM-UC-gNb">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
-                            </scrollView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RCU-1E-fql">
-                                <rect key="frame" x="285" y="557" width="60" height="60"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="Bn9-y9-T4l"/>
-                                    <constraint firstAttribute="height" constant="60" id="Oag-mo-l7Y"/>
-                                </constraints>
-                                <state key="normal" image="discovery-pear-button"/>
-                                <connections>
-                                    <action selector="pearButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="OF8-k1-AsJ"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="fYb-Vk-EV8" firstAttribute="height" secondItem="RCU-1E-fql" secondAttribute="height" id="0JH-BQ-XTa"/>
+                            <constraint firstItem="59G-8I-dMp" firstAttribute="height" secondItem="RCU-1E-fql" secondAttribute="height" id="57g-N5-tPV"/>
+                            <constraint firstItem="59G-8I-dMp" firstAttribute="centerY" secondItem="RCU-1E-fql" secondAttribute="centerY" id="BRf-fu-eCD"/>
                             <constraint firstItem="lb2-5H-MMS" firstAttribute="trailing" secondItem="yBm-A3-ChV" secondAttribute="trailing" id="Ct5-QS-gy4"/>
+                            <constraint firstItem="59G-8I-dMp" firstAttribute="width" secondItem="RCU-1E-fql" secondAttribute="width" id="Niu-4y-DgS"/>
+                            <constraint firstItem="yBm-A3-ChV" firstAttribute="bottom" secondItem="RCU-1E-fql" secondAttribute="bottom" constant="30" id="U5k-PZ-1NI"/>
+                            <constraint firstItem="RCU-1E-fql" firstAttribute="leading" secondItem="fYb-Vk-EV8" secondAttribute="trailing" constant="12" id="X8W-fV-M3N"/>
                             <constraint firstItem="lb2-5H-MMS" firstAttribute="leading" secondItem="yBm-A3-ChV" secondAttribute="leading" id="Xh3-Xi-7Vx"/>
                             <constraint firstItem="lb2-5H-MMS" firstAttribute="top" secondItem="yBm-A3-ChV" secondAttribute="top" id="Xkv-Pn-60S"/>
                             <constraint firstItem="FuM-UC-gNb" firstAttribute="centerX" secondItem="yBm-A3-ChV" secondAttribute="centerX" id="bbV-Yh-nUD"/>
-                            <constraint firstItem="yBm-A3-ChV" firstAttribute="trailing" secondItem="RCU-1E-fql" secondAttribute="trailing" constant="30" id="izd-86-iWw"/>
+                            <constraint firstItem="yBm-A3-ChV" firstAttribute="trailing" secondItem="RCU-1E-fql" secondAttribute="trailing" constant="15" id="dju-m1-HxF"/>
                             <constraint firstItem="FuM-UC-gNb" firstAttribute="leading" secondItem="yBm-A3-ChV" secondAttribute="leading" id="jTv-a4-nud"/>
                             <constraint firstItem="FuM-UC-gNb" firstAttribute="top" secondItem="lb2-5H-MMS" secondAttribute="bottom" id="mXF-gt-iS5"/>
                             <constraint firstItem="yBm-A3-ChV" firstAttribute="bottom" secondItem="FuM-UC-gNb" secondAttribute="bottom" id="mkB-i0-1AN"/>
+                            <constraint firstItem="fYb-Vk-EV8" firstAttribute="centerY" secondItem="RCU-1E-fql" secondAttribute="centerY" id="sHz-oO-rjX"/>
+                            <constraint firstItem="fYb-Vk-EV8" firstAttribute="width" secondItem="RCU-1E-fql" secondAttribute="width" id="sNi-5W-kpo"/>
                             <constraint firstItem="yBm-A3-ChV" firstAttribute="trailing" secondItem="FuM-UC-gNb" secondAttribute="trailing" id="thB-Be-c6P"/>
-                            <constraint firstItem="yBm-A3-ChV" firstAttribute="bottom" secondItem="RCU-1E-fql" secondAttribute="bottom" constant="50" id="xwP-qS-hER"/>
+                            <constraint firstItem="59G-8I-dMp" firstAttribute="leading" secondItem="yBm-A3-ChV" secondAttribute="leading" constant="15" id="wC6-8r-HRR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yBm-A3-ChV"/>
                     </view>
                     <connections>
+                        <outlet property="headerHeightConstraint" destination="MYw-Fe-fYx" id="HTx-cT-hf5"/>
+                        <outlet property="likeButton" destination="fYb-Vk-EV8" id="0v0-Ps-AWi"/>
                         <outlet property="pearButton" destination="RCU-1E-fql" id="idk-vs-m3x"/>
                         <outlet property="profileNameLabel" destination="YVo-UZ-U0x" id="1g8-VC-C0a"/>
                         <outlet property="scrollView" destination="FuM-UC-gNb" id="vjG-jh-ayd"/>
+                        <outlet property="skipButton" destination="59G-8I-dMp" id="7y7-SZ-YAP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R5u-BV-DcN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -116,8 +115,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="discovery-pear-button" width="266.66665649414062" height="266.66665649414062"/>
-        <image name="icon-more" width="170.66667175292969" height="170.66667175292969"/>
-        <image name="onboarding-back-button" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="discovery-icon-like" width="220" height="220"/>
+        <image name="discovery-icon-pear" width="220" height="220"/>
+        <image name="discovery-icon-skip" width="200" height="200"/>
     </resources>
 </document>
