--- a/Pear/Controllers/New New Redesign/Landing Screen/LandingScreenViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Landing Screen/LandingScreenViewController.storyboard
@@ -6,12 +6,16 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Cera Pro Black.otf">
             <string>CeraPro-Black</string>
+        </array>
+        <array key="OpenSans-Bold.ttf">
+            <string>OpenSans-Bold</string>
         </array>
         <array key="OpenSans-ExtraBold.ttf">
             <string>OpenSans-ExtraBold</string>
@@ -30,14 +34,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pear-icon-white" translatesAutoresizingMaskIntoConstraints="NO" id="Yfc-4O-4AC">
-                                <rect key="frame" x="142.5" y="112.5" width="90" height="90"/>
+                                <rect key="frame" x="142.5" y="102.5" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="mln-QQ-gkQ"/>
                                     <constraint firstAttribute="width" secondItem="Yfc-4O-4AC" secondAttribute="height" multiplier="1:1" id="xK1-LB-5Qs"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXf-y1-8Al">
-                                <rect key="frame" x="20" y="210.5" width="335" height="60"/>
+                                <rect key="frame" x="20" y="200.5" width="335" height="70"/>
                                 <fontDescription key="fontDescription" name="CeraPro-Black" family="Cera Pro" pointSize="60"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -88,10 +92,18 @@
                                     <action selector="termsButtonClicked:" destination="rCb-Xw-oUi" eventType="touchUpInside" id="ADL-fJ-y87"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCs-n7-FWi">
+                                <rect key="frame" x="20" y="420.5" width="335" height="33"/>
+                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="15"/>
+                                <state key="normal" title="Got an event code?">
+                                    <color key="titleColor" name="primaryTextColor"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="6LX-bT-a7M" secondAttribute="trailing" constant="30" id="12E-JE-3pv"/>
+                            <constraint firstItem="WCs-n7-FWi" firstAttribute="top" secondItem="mdH-2H-OCq" secondAttribute="bottom" constant="12" id="8Vc-HN-kZN"/>
                             <constraint firstItem="Yfc-4O-4AC" firstAttribute="centerX" secondItem="3yk-8c-7g0" secondAttribute="centerX" id="AM8-QT-k9y"/>
                             <constraint firstItem="6LX-bT-a7M" firstAttribute="centerX" secondItem="3yk-8c-7g0" secondAttribute="centerX" id="GFs-jn-nTU"/>
                             <constraint firstItem="gXf-y1-8Al" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="20" id="RZ8-yT-s58"/>
@@ -99,6 +111,7 @@
                             <constraint firstItem="eht-Lt-t1k" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="30" id="Sgx-ZS-vtE"/>
                             <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="gXf-y1-8Al" secondAttribute="trailing" constant="20" id="WSA-07-Klb"/>
                             <constraint firstItem="gXf-y1-8Al" firstAttribute="top" secondItem="Yfc-4O-4AC" secondAttribute="bottom" constant="8" id="XLI-7G-s0h"/>
+                            <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="WCs-n7-FWi" secondAttribute="trailing" constant="20" id="a5l-gA-Ufd"/>
                             <constraint firstItem="eht-Lt-t1k" firstAttribute="centerX" secondItem="3yk-8c-7g0" secondAttribute="centerX" id="gM7-eh-O7j"/>
                             <constraint firstItem="6LX-bT-a7M" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="30" id="hdb-eX-Fv0"/>
                             <constraint firstItem="mdH-2H-OCq" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="20" id="i2g-Wd-DIn"/>
@@ -107,6 +120,7 @@
                             <constraint firstItem="eht-Lt-t1k" firstAttribute="top" secondItem="gXf-y1-8Al" secondAttribute="bottom" constant="8" id="noF-P2-ngD"/>
                             <constraint firstItem="6LX-bT-a7M" firstAttribute="top" secondItem="eht-Lt-t1k" secondAttribute="bottom" constant="12" id="vca-Jp-JJa"/>
                             <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="eht-Lt-t1k" secondAttribute="trailing" constant="30" id="x3I-Ok-cVq"/>
+                            <constraint firstItem="WCs-n7-FWi" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="20" id="y4o-CR-2f3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3yk-8c-7g0"/>
                     </view>
@@ -122,6 +136,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="pear-icon-white" width="354" height="435"/>
+        <image name="pear-icon-white" width="118" height="145"/>
+        <namedColor name="primaryTextColor">
+            <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
